# templates_cpp

./: .gitignore  README.md
template_project_cmake/: CMakeLists.txt
template_project_cmake/src/: CMakeLists.txt  main.cpp
template_project_cmake_gtest/: CMakeLists.txt
template_project_cmake_gtest/include/: softmax.hpp
template_project_cmake_gtest/src/: CMakeLists.txt
template_project_cmake_gtest/test/: CMakeLists.txt
template_project_cmake_gtest/test/test_softmax/: CMakeLists.txt  test_softmax.cpp
template_project_gtest/: main.cpp  softmax.cpp  softmax.hpp
template_project_gtest/test/: README.md  softmax_test.cpp
